# Memory-os-ai

./: .env.example  .gitignore  .mcp.json  Dockerfile  README.md  README_v2.md  pyproject.toml  server.json  smithery.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
article/: memory-os-ai-infinite-memory.md
bridges/chatgpt/: README.md  mcp-connection.json
bridges/claude-code/: CLAUDE.md
bridges/claude-desktop/: README.md
bridges/codex/: AGENTS.md  README.md
bridges/codex/.codex/: mcp.json
bridges/vscode/: mcp.json
legacy/: README.md  convert_to_sentence_models.py  memory_os_ai.py  memory_os_ai_gui.py
src/memory_os_ai/: __init__.py  __main__.py  chat_extractor.py  cloud_storage.py  engine.py  instructions.py  models.py  server.py  setup.py  storage_router.py
tests/: test_bridges.py  test_chat_extractor.py  test_cloud_storage.py  test_gaps.py  test_memory.py  test_server_dispatch.py  test_setup.py  test_z_coverage_boost.py  test_zz_full_coverage.py
vscode-extension/: README.md  package.json  tsconfig.json
vscode-extension/src/: extension.ts
